# proekt

./: .clang-format  CMakeLists.txt  README.md  doctest.h  game.cpp  main.cpp  main.h  test.cpp
