cmake_minimum_required(VERSION 3.21)
project(proekt)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_EXE_LINKER_FLAGS "-static -static-libgcc")
set(SFML_STATIC_LIBRARIES TRUE)
set(SFML_DIR "C:/Users/79775/CLionProjects/lib/sfml/GCC 7.3.0 MinGW (SEH) - 64-bit/SFML-2.5.1/lib/cmake/SFML")
add_executable(proekt main.cpp main.h game.cpp)
add_executable(t31 test.cpp main.h game.cpp)
target_link_libraries(proekt sfml-graphics)
target_link_libraries(t31 sfml-graphics)
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
find_package(SFML 2.5 REQUIRED graphics network audio window system)
enable_testing()